# ocf-model-template

./: README.md  copier.yml
.github/: ci.yml
model-repo/: README.md  model.py  pyproject.toml  submit-jobs.sh  validate-baskerville.sh  validate-config.yml  validate_config.yml
model-repo/src/{{python_package_name}}/: __init__.py  hello.py
my-proj/: model.py  pyproject.toml
